external-crates/move/crates/move-compiler/tests/move_check/parser/struct_missing_lbrace.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_missing_lbrace.move:3:5
  │
2 │     struct S { f: u64 // }
  │              - To match this '{'
3 │     fun f() {}
  │     ^ Expected '}'
