external-crates/move/crates/move-compiler/tests/move_check/parser/struct_missing_lbrace.move
module 0x42::M {
    struct S { f: u64 // }
    fun f() {}
}
